# Mas_API_cli

./: README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/pangu/: SKILL.md
examples/: dataset_import.yaml  dataset_process.yaml  service_deploy.yaml  service_update.yaml  training_create.yaml
src/pangu/: auth.py  client.py  config.py  main.py  output.py
src/pangu/adapters/: __init__.py  base.py
src/pangu/adapters/pool/: hc.py  hcs.py  v1.py  v2.py
src/pangu/commands/: config_cmd.py  dataset.py  model.py  pool.py  service.py  training.py  workspace.py
